tests/files/type_checker_tests/should_pass/236.cmdr
//Test that functions type check
fn add(): void {
    println 3 + 4;
}
add();
x = add();
