tests/files/type_checker_tests/should_fail/053.cmdr
//Should fail if variable already exists
x: int = 3;
fn foo(x: int): int {
    return x;
}
